--- a/wlnmp/.wlnmp.env
+++ b/wlnmp/.wlnmp.env
@@ -1,5 +1,5 @@
 # 项目开发目录
 # windows
-# WIN_WLNMP_WWW_DIR=D://wlnmp-docker/wwwroot
+WIN_WLNMP_WWW_DIR=D://wlnmp-docker/wwwroot
 # linux
 LINUX_WLNMP_WWW_DIR=~/wwwroot
