--- a/hub/php_7_4/Dockerfile
+++ b/hub/php_7_4/Dockerfile
@@ -1,50 +1,55 @@
-FROM php:7.4-fpm-alpine
+FROM php:7.4-fpm-buster
 
 # PHP扩展目录，自定义扩展文件放到这里面
 # COPY xxx.so /usr/local/lib/php/extensions/
 
-# 备份原始 repositories 文件
-RUN cp /etc/apk/repositories /etc/apk/repositories.bak; \
-    # sed -i 's/dl-cdn.alpinelinux.org/mirrors.ustc.edu.cn/g' /etc/apk/repositories; \
-    # 修改 repositories 文件为阿里云镜像源
-    sed -i 's/dl-cdn.alpinelinux.org/mirrors.aliyun.com/g' /etc/apk/repositories; \
+# 备份原始 sources.list 文件
+RUN cp /etc/apt/sources.list /etc/apt/sources.list.bak && \
+    # 替换为阿里云镜像源
+    sed -i 's/deb.debian.org/mirrors.aliyun.com/g' /etc/apt/sources.list && \
+    sed -i 's/security.debian.org/mirrors.aliyun.com\/debian-security/g' /etc/apt/sources.list && \
     # 更新软件包列表
-    apk update; \
-    # 安装 libzip-dev unzip 扩展，安装 pdo_mysql 扩展
-    apk add --no-cache \
-        libzip-dev unzip \
-        && docker-php-ext-install zip pdo_mysql; \
-    # 安装 GD 扩展
-    apk add --no-cache \
-        freetype-dev libjpeg-turbo-dev libpng-dev \
-        && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/user/include/ \
-        && docker-php-ext-install -j$(nproc) gd; \
-    # 安装 memcached 扩展
-    apk add --no-cache autoconf automake make g++ \
-        && pecl install memcache-4.0.5.2 \
-        && docker-php-ext-enable memcache; \
-    apk add --no-cache libmemcached-dev zlib-dev \
-        && pecl install memcached-3.1.5 \
-        && docker-php-ext-enable memcached; \
-    # 安装 Redis 扩展
-    apk add --no-cache autoconf automake make g++ \
-        && pecl channel-update pecl.php.net \
-        && pecl install -n igbinary \
-        && docker-php-ext-enable igbinary; \
-        # 手动编译redis扩展(php7.4以上版本,用 pecl install redis命令启用igbinary没成功)
-        pecl download redis \
-        && tar -zxvf redis-6.2.0.tgz \
-        && cd redis-6.2.0 \
-        && phpize \
-        && ./configure --with-php-config=/usr/local/bin/php-config --enable-redis-igbinary; \
-        make && make install; \
-        docker-php-ext-enable redis;
-    # 启用自定义扩展 - 对应上面的 COPY xxx.so /usr/local/lib/php/extensions/
-    # echo "zend_extension = /usr/local/lib/php/extensions/xxx.so" >> /usr/local/etc/php/conf.d/docker-php-ext-ioncube.ini; \
+    apt-get update && \
+    # 安装常用依赖
+    apt-get install -y --no-install-recommends \
+        libzip-dev \
+        unzip \
+        zlib1g-dev \
+        libfreetype6-dev \
+        libjpeg62-turbo-dev \
+        libpng-dev \
+        libwebp-dev && \
+    # 安装并启用 zip 扩展
+    docker-php-ext-install zip pdo_mysql pcntl bcmath && \
+    # 安装并启用 gd 扩展
+    docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp && \
+    docker-php-ext-install -j$(nproc) gd
+
+# 安装 Redis 扩展
+RUN apt-get install -y --no-install-recommends \
+        autoconf \
+        automake \
+        make \
+        g++ && \
+    # 更新 PECL channel
+    pecl channel-update pecl.php.net && \
+    # 安装 igbinary 扩展
+    pecl install -n igbinary && \
+    docker-php-ext-enable igbinary && \
+    # 手动编译安装 redis 扩展
+    pecl download redis && \
+    tar -zxvf redis-6.2.0.tgz && \
+    cd redis-6.2.0 && \
+    phpize && \
+    ./configure --with-php-config=/usr/local/bin/php-config --enable-redis-igbinary && \
+    make && make install && \
+    docker-php-ext-enable redis
+
+# 清理 APT 缓存
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # 新增入口脚本（在文件末尾添加）
 COPY entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/entrypoint.sh
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
-
 CMD ["php-fpm"]
