php7.1和7.4增加时区支持，增加docker-registry镜像搭建说明文档

--- a/hub/php_7_4/docker-compose.yml
+++ b/hub/php_7_4/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
   php_7_4:
-    build: ${WLNMP_ROOT_DIR}/hub/php_7_4
+    build:
+      context: ${WLNMP_ROOT_DIR}/hub/php_7_4
+      args:
+          TZ: ${WLNMP_TIMEZONE}
     volumes:
       # 代码卷
       - type: volume
