--- a/hub/php_7_1/Dockerfile
+++ b/hub/php_7_1/Dockerfile
@@ -1,5 +1,14 @@
 FROM php:7.1-fpm-alpine
 
+# 声明构建参数
+ARG TZ
+# 将构建参数转为环境变量（可选）
+ENV TZ=$TZ
+
+# alpine需安装tzdata包
+RUN apk add --no-cache tzdata; \
+    ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
 # PHP扩展目录，自定义扩展文件放到这里面
 # COPY xxx.so /usr/local/lib/php/extensions/
 
