--- a/hub/php_7_1/docker-compose.yml
+++ b/hub/php_7_1/docker-compose.yml
@@ -1,6 +1,9 @@
 services:
   php_7_1:
-    build: ${WLNMP_ROOT_DIR}/hub/php_7_1
+    build:
+      context: ${WLNMP_ROOT_DIR}/hub/php_7_1
+      args:
+          TZ: ${WLNMP_TIMEZONE}
     volumes:
       # 代码卷
       - type: volume
