--- a/wlnmp/.wlnmp.env
+++ b/wlnmp/.wlnmp.env
@@ -1,7 +1,5 @@
 # 项目开发目录
 # windows
-WIN_WLNMP_WWW_DIR=D://wlnmp-docker/wwwroot
+WIN_WLNMP_WWW_DIR=D://git/codeup/wwwroot
 # linux
 LINUX_WLNMP_WWW_DIR=~/wwwroot
-# 设置时区
-WLNMP_TIMEZONE=Asia/Shanghai
